// protoc -I . pluginv2.proto  --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative
syntax = "proto3";

package pluginv2;

option go_package = "github.com/loft-sh/vcluster/pkg/plugin/v2/pluginv2";

service Plugin {
	rpc Start(Start.Request) returns (Start.Response);
	rpc GetClientHooks(GetClientHooks.Request) returns (GetClientHooks.Response);
	rpc Mutate(Mutate.Request) returns (Mutate.Response);
	rpc SetLeader(SetLeader.Request) returns (SetLeader.Response);
}

message Start {
	message Request {
		string virtualClusterConfig = 1;
		string physicalClusterConfig = 2;
		string syncerConfig = 3;

		string targetNamespace = 4;
		string currentNamespace = 5;

		string options = 6;
	}

	message Response {}
}

message GetClientHooks {
	message Request {}

	message Response {
		repeated ClientHook clientHooks = 1;
	}

	message ClientHook {
		string apiVersion = 1;
		string kind = 2;
		repeated string types = 3;
	}
}

message Mutate {
	message Request {
		string apiVersion = 1;
		string kind = 2;
		string object = 3;
		string type = 4;
	}

	message Response {
		string object = 1;
		bool mutated = 2;
	}
}

message SetLeader {
	message Request {}
	message Response {}
}



